# mirufm

./: .editorconfig  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  flake.nix  release-please-config.json
.github/workflows/: ci.yaml  release-please.yaml
assets/: mirufm.desktop
crates/mirufm/: CHANGELOG.md  Cargo.toml
crates/mirufm-core/: CHANGELOG.md  Cargo.toml
crates/mirufm-core/benches/: read_dir.rs
crates/mirufm-core/src/: fs.rs  git.rs  launch.rs  lib.rs  ops.rs  preview.rs  scheduler.rs  sort.rs  state.rs  watch.rs
crates/mirufm/src/: actions.rs  app.rs  main.rs
