[workspace]
resolver = "2"
members = ["crates/mirufm-core", "crates/mirufm"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/atqamz/mirufm"

[workspace.dependencies]
thiserror = "2"
tempfile = "3"
criterion = "0.8"
notify = "8"
gpui = { git = "https://github.com/zed-industries/zed", rev = "bc29bcfe728e3ce158f36b6a1b15f3dff667fe02" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "bc29bcfe728e3ce158f36b6a1b15f3dff667fe02" }
