[package]
name = "mirufm-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
notify.workspace = true
thiserror.workspace = true
trash.workspace = true
gix.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "read_dir"
harness = false
