[package]
name = "mirufm"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mirufm-core = { path = "../mirufm-core" }
gpui.workspace = true
gpui_platform = { workspace = true, features = ["font-kit", "wayland", "x11"] }
tracing.workspace = true
tracing-subscriber.workspace = true
